there should not be a hash in div id

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Generated CouchApp</h1>
     <p>This is a placeholder page</p>
-    <div id="#hello"></div>
+    <div id="hello"></div>
   </body>
   <script src="/_utils/script/json2.js"></script>
   <script src="/_utils/script/jquery.js"></script>
