index.html does everything

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -7,7 +7,9 @@
   <body>
     <h1>Generated CouchApp</h1>
     <p>This is a placeholder page</p>
+    <div id="account"></div>
     <div id="hello"></div>
+    <div id="ajax"></div>
   </body>
   <script src="/_utils/script/json2.js"></script>
   <script src="/_utils/script/jquery.js"></script>
